# stock-downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/stock_downloader/: main.py  utilities.py
src/stock_downloader/config/: config.toml
src/stock_downloader/data/: index_symbols.py  listed_symbols.py  loaders.py  nasdaq.py  select_symbols.py  yfinance_batch.py  yfinance_info.py  yfinance_price.py
src/stock_downloader/database/: db.py
src/stock_downloader/db/: db.py
src/stock_downloader/indicators/: regression.py  ta.py  ta_definitions.py
src/stock_downloader/mappings/: columns.toml  other_symbols.toml  sector_etfs.toml
src/stock_downloader/models/: column_mappings.toml  data_classes.py  etf_info_mappings.py
src/stock_downloader/schemas/: dowjones.py  equity_info.py  etf_info.py  indicies.py  info.py  ma_future.py  nasdaq100.py  nasdaq_symbols.py  other_symbols.py  price.py  regression.py  regression_indicators.py  regression_indicators_ma.py  sp500.py  ta__change.py  ta__ma_ratio.py  talib.py
src/stock_downloader/technical_analysis/: regression.py  ta_definitions.py  talib.py
src/workflow_manager/: definitions.py
src/workflow_manager/defs/: assets.py
